And base path and generate new swagger docs
